# phonolex-web

./: CHANGELOG.md  README.md  index.html  pyproject.toml  requirements.txt
data/: all_words.pkl:Zone.Identifier  common_lemmas.pkl  common_lemmas.pkl:Zone.Identifier  common_words.pkl  common_words.pkl:Zone.Identifier
phonolex_web/: main.py
