[tool.poetry]
name = "phonolex-web"
version = "1.0.0"
description = "A web page implementing PhonoLex features."
authors = ["Jared Neumann <antspiderbee@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"
pandas = "^1.4.3"
streamlit-aggrid = "^0.2.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
